--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "nitro": "npm:nitro-nightly@latest",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "redaxios": "^0.5.1",
+    "simple-icons": "^16.8.0",
     "tailwindcss": "^4.0.6",
     "vite-tsconfig-paths": "^6.0.2"
   },
