--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "@types/react-dom": "^19.2.0",
     "@vitejs/plugin-react": "^5.0.4",
     "jsdom": "^27.0.0",
-    "prettier": "^3.5.3",
+    "prettier": "^3.8.1",
+    "prettier-plugin-tailwindcss": "^0.7.2",
     "shadcn": "^3.8.5",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.7.2",
